Etat de l'art jimmy

--- a/rapport/Rapport final.tex
+++ b/rapport/Rapport final.tex
@@ -61,8 +61,16 @@ Bonjour
 \subsection{Portée de l'étude}
 
 \section{État de l'art}
+Notre étude est plutôt novatrice et la littérature existante sur notre problématique spécifique est assez limitée. En ce sens, nous résumons plutôt des recherches existantes en lien avec des concepts qui seront utiles pour le développement d'une architecture C2 dans le nuage.
 
-\section{Méthodologie}
+
+Une compréhension solide du modèle d'infonuagique SPI est fournie par Hashizume et al. où l'on peut constater les différences entre le logiciel comme service (SaaS), la plateforme comme service (PaaS) et l'infrastructure comme service (IaaS). Ces trois variantes sont présentées d'un point de vue de la cybersécurité pour comprendre les conséquences d'utiliser un modèle plutôt qu'un autre. On y apprend entre autre que les problèmes de sécurité des variantes d'infonuagique qui sont plus hautes dans la hiérarchie SPI vont porter les vulnérabilités des variantes plus basses. Particulièrement, une attention doit être portée à la sécurité des réseaux virtuels et des groupes de sécurité afin de s'assurer que ceux-ci sont configurés correctement. Cela sert à éviter une infiltration potentielle en abusant de permissions mal configurées.
+
+
+Le point de vue des équipes qui travaillent en \textit{Red Teaming} chez Microsoft est présenté par un papier de Smith, Theisen et Barik. Ce point de vue est central pour notre projet, car il permet de comprendre les raisons qui poussent au besoin de développer une infrastructure C2 dans un contexte professionnel. On y apprend que les ingénieurs en sécurité offensive travaillent principalement sur des mandats internes de longue haleine, ce qui peut se traduire dans notre projet par la nécessité d'avoir des infrastructures résilientes et durables temporellement. On comprend aussi que les professionnels de la cybersécurité sont amenés à développer des outils personnalisés pour réussir leurs tâches de cyberattaques, et que les infrastructures d'une équipe de \textit{Red Teaming} doivent permettre une protection contre ce type de script.
+
+
+Un amalgame des informations et technologies disponibles en lien avec les répartisseurs de charge \textit{load balancers} est effectuée via un résumé de Afzal et Kavitha. Cette taxonomie détaillée et complète permet d'avoir une compréhension globale du sujet pour évaluer les mesures qui s'offrent à nous dans notre projet et comprendre le type de répartisseurs de charge qu'offre Amazon Web Services.\section{Méthodologie}
 
 \subsection{Services infonuagiques et composants}
 Différents services AWS et composants associés ont été nécessaires afin de déployer l’infrastructure initiale qui a mené aux expérimentations de la section 5. D’abord, des instances EC2 en redondance dans un groupe de mise à l’échelle automatique ont été configurée. Ce type de service permet d’assurer la haute disponibilité et la réactivité du système en gérant le nombre d’instances EC2 disponibles à un moment spécifique, cela en se basant sur la demande. Il est possible de spécifier un minimum et un maximum d’instances autorisées. La technologie de répartiteur de charge d’application (ALB) a aussi été utilisée. Elle est automatiquement en redondance dans une région donnée et peut donc soutenir une charge de requêtes élevée, ce qui permet à nouveau d’ajouter à la disponibilité de l’application. Autrement, les groupes de sécurité sont également utilisés pour permettre de gérer le trafic permis en entrée et en sortie. L’ensemble des ressources partagent un sous-réseau géré par la fonctionnalité des \texit{subnets} de AWS.
